--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,11 @@
     "ansible.completion.provideRedirectModules": true,
     "ansible.validation.enabled": true,
     "ansible.validation.lint.enabled": true,
-    "ansible.validation.lint.path": "/usr/local/bin/ansible-lint"
+    "ansible.validation.lint.path": "/usr/local/bin/ansible-lint",
+    "workbench.startupEditor": "none",
+    "git.confirmSync": false,
+    "git.autofetch": true,
+    "redhat.telemetry.enabled": true,
+    "files.trimTrailingWhitespace": true,
+    "git.postCommitCommand": "push"
 }
