--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,6 +1,6 @@
 schemaVersion: 2.2.0
 metadata:
-  name: ansible-demo
+  name: ansible-demo-custom
 components:
   - name: tooling-container
     container:
